--- a/Changes
+++ b/Changes
@@ -1,9 +1,9 @@
 Changes for Data::Turtle:
 
 {{$NEXT}}
-    - Added eg/synopsis-gd
-    - Added eg/synopsis-imager
+    - Added eg/synopsis-gd.
+    - Added eg/synopsis-imager.
     - Improved documentation.
 
 0.01  2015-12-15
-    - Moved from perlsonal development repo.
+    - Moved from personal development repo.
