--- a/Changes
+++ b/Changes
@@ -1,13 +1,16 @@
 Changes for Data::Turtle:
 
 {{$NEXT}}
+    - Add eg/lsys
+
+0.0102 2015-12-16
     - Use POSIX::ceil() instead of int().
     - Adjust SYNOPSIS code.
 
 0.0101 2015-12-15
-    - Added eg/synopsis-gd.
-    - Added eg/synopsis-imager.
-    - Improved documentation.
+    - Add eg/synopsis-gd.
+    - Add eg/synopsis-imager.
+    - Improve documentation.
 
 0.01  2015-12-15
-    - Moved from personal development repo.
+    - Move from personal development repo.
