--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Changes for Data::Turtle:
 
 {{$NEXT}}
+    - Add familiar Lindenmayer systems to the example script.
 
 0.0104 2015-12-16
     - (Attempt to) Fix a sometimes failing test.
