--- a/Changes
+++ b/Changes
@@ -1,6 +1,11 @@
 Changes for Data::Turtle:
 
 {{$NEXT}}
+    - Improve documentation.
+    - Follow perlcritic and fix my conditional returns.
+    - Improve eg/lindenmayer-gd a bit.
+
+0.0105 2018-03-18
     - Add familiar Lindenmayer systems to the example script.
 
 0.0104 2015-12-16
