--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Changes for Data::Turtle:
 
 {{$NEXT}}
+    - Improve eg/lindenmayer-gd a bit more.
 
 0.0106 2018-03-18
     - Improve documentation.
