--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Changes for Data::Turtle:
 
 {{$NEXT}}
+    - Drop the unnecessary turn() method.
 
 0.0107 2018-12-01
     - Improve eg/lindenmayer-gd a bit more.
