--- a/Changes
+++ b/Changes
@@ -1,6 +1,9 @@
 Changes for Data::Turtle:
 
 {{$NEXT}}
+    - Improve documentation.
+
+0.0200 2018-12-01
     - Drop the unnecessary turn() method.
 
 0.0107 2018-12-01
