--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Changes for Data::Turtle:
 
 {{$NEXT}}
+    - Fix misleading documentation.
 
 0.0202 2023-04-29
     - Improve documentation slightly.
