--- a/Changes
+++ b/Changes
@@ -2,6 +2,7 @@ Changes for Data::Turtle:
 
 {{$NEXT}}
     - Fix misleading documentation.
+    - Modernize tests.
 
 0.0202 2023-04-29
     - Improve documentation slightly.
