--- a/Changes
+++ b/Changes
@@ -1,6 +1,9 @@
 Changes for Data::Turtle:
 
 {{$NEXT}}
+    - Fix the "draw it!" condition in examples.
+
+0.0204 2023-12-26
     - Fix grammar.
 
 0.0203 2023-12-26
