--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Changes for Data::Turtle:
 
 {{$NEXT}}
+    - Attempt to improve documentation...
 
 0.0206 2023-12-26
     - Fix the SYNOPSIS yet again. Argh!
